<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragments.MoodEventDetailsFragment"
    android:layout_marginBottom="80dp"
    android:padding="20dp"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/details_profile_picture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/profile_placeholder"
            android:contentDescription="@string/profile_picture"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/username_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/details_unfollow_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="12dp"
                android:backgroundTint="@color/blue_nav_bar"
                android:paddingHorizontal="8dp"
                android:text="@string/unfollow_text"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_unfollow"
                app:iconGravity="start"
                app:iconSize="20dp"
                app:iconTint="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/details_event_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:text="@string/date_and_time_text"
        android:textColor="@color/gray"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/details_emotion_and_social_situation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        android:text="Happy 😊 with 2 others"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/details_event_timestamp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_event_timestamp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/music_event_details"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="35dp"
        android:paddingHorizontal="0dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:icon="@drawable/music"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_emotion_and_social_situation" />

    <ImageView
        android:id="@+id/details_mood_image"
        android:layout_width="370dp"
        android:layout_height="303dp"
        android:contentDescription="@string/reason_why_image_desc"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/music_event_details" />

    <TextView
        android:id="@+id/details_reason_why"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reason_why"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_mood_image" />

    <TextView
        android:id="@+id/details_event_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="2dp"
        android:text="@string/mood_event_location"
        android:textSize="12sp"
        android:layout_marginTop="5dp"
        app:drawableStartCompat="@drawable/ic_location"
        app:layout_constraintTop_toBottomOf="@+id/details_reason_why"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical"
        />

    <TextView
        android:id="@+id/comments_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="COMMENTS:"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_event_location"
        app:layout_constraintBottom_toTopOf="@+id/comments_list_view"
        android:paddingTop="10dp"/>

    <ListView
        android:id="@+id/comments_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:minHeight="100dp"
        app:layout_constraintTop_toBottomOf="@+id/comments_title"
        app:layout_constraintBottom_toTopOf="@+id/comment_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/comment_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comments_list_view">

        <EditText
            android:id="@+id/comment_input"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@android:drawable/editbox_background"
            android:hint="Add a comment..."
            android:padding="10dp"
            android:textSize="14sp"/>

        <ImageButton
            android:id="@+id/send_comment_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@null"
            android:src="@drawable/ic_send"
            android:contentDescription="Send comment"
            android:padding="5dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>